# ladcp_tool

./: .gitignore  3d-commands.md  CHANGELOG.md  CITATION.cff  LICENSE  LIMITATIONS.md  README.md  TECHNICAL.md  THIRD_PARTY_NOTICES.md  USER_GUIDE.md  __init__.py  ctd_tool.py  current_viewer_tool.py  ladcp_tool.py  pyproject.toml  requirements.txt
ldeo/: calc_shear3.m.hacked
ldeo/geomag/: IGRF13coeffs.mat  IGRF13coeffs.txt  IGRF13coeffs.xlsx
ldeo/original/: battery.m  bestlag.m  calc_shear3.m  checkbtrk.m  checkbtrk2.m  checkinv.m  checktilt.m  clearallbut.m  dragmodel.m  end_processing_step.m  getbtrack.m  getdpthi.m  geterr.m  getinv.m  getserial.m  ladcp2cdf.m  lanarrow.m  loadctd.m  loadctdprof.m  loadnav.m  loadsadcp.m  meannan.m  medianan.m  outlier.m  pcolorn.m  plotinv.m  plotraw.m  prepinv.m  process_cast.m  rditype.m  savearch.m  saveprot.m  saveres.m  setdefv.m  stdnan.m  streamer.m  whoami.m
ldeo/patched/: add_struct.m  begin_processing_step.m  besttlag.m  checkbtrk.m  checkinv.m  cruise.m  default.m  edit_data.m  existf.m  fixcompass.m  getdpth.m  getfile.m  getinv.m  gregoria.m  htmltable.m  htmltable2.m  imagnan.m  loadctd.m  loadctdprof.m  loadrdi.m  localmax2.m  magdev.m  maxnan.m  mkSADCP.m  openwindows.m  pcolorn.m  plotinv.m  plotraw.m  (+9 more)
outputs/: __init__.py  current_viewer.py  odv_writer.py  plotter.py  result_writer.py
processors/: __init__.py  bathy_loader.py  ctd_processor.py  ldeo_runner.py  rdi_reader.py
scripts/: validate_directives.py
templates/: batch_process_all.m  set_cast_params.template
utils/: __init__.py  cast_matcher.py
